tests/sksl/errors/PrivateTypes.glsl
### Compilation failed:

error: 2: type '$bvec' is private
error: 5: type '$ivec' is private
error: 6: type '$genType' is private
error: 7: type '$mat' is private
error: 8: type '$floatLiteral' is private
5 errors
